--- a/src/app/gifs/pages/home-page/home-page.component.html
+++ b/src/app/gifs/pages/home-page/home-page.component.html
@@ -1,10 +1,9 @@
 <div class="row p-3">
   <div class="col-12">
-    <!-- Busqueda -->
-    1
+    <gifs-search-box></gifs-search-box>
   </div>
   <div class="col-12 pt-2">
     <!-- Listado de Gifs -->
-    2
+    <gifs-card-list id="cardList"></gifs-card-list>
   </div>
 </div>
